// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Block Container properties 1`] = `
<div
  className="borrow-ui__block  borrow-ui__block--separated borrow-ui__block--padded  borrow-ui__block--outstanding "
>
  
  
  With \`outstanding\` set to \`true\`.
  <p
    className="borrow-ui__text  "
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis egestas semper leo ac porta. Integer metus urna, lacinia vitae purus et, pharetra auctor purus. Vivamus bibendum id lacus sit amet faucibus.
  </p>
</div>
`;

exports[`Storyshots Components/Block Container title component 1`] = `
<div
  className="borrow-ui__block  borrow-ui__block--separated borrow-ui__block--padded  borrow-ui__block--outstanding "
>
  <h2
    style={
      Object {
        "color": "red",
      }
    }
  >
    Red title
  </h2>
  Is the title in red?
  <p
    className="borrow-ui__text  "
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis egestas semper leo ac porta. Integer metus urna, lacinia vitae purus et, pharetra auctor purus. Vivamus bibendum id lacus sit amet faucibus.
  </p>
</div>
`;

exports[`Storyshots Components/Block Content properties 1`] = `
<div
  className="borrow-ui__block  borrow-ui__block--separated borrow-ui__block--padded borrow-ui__block--rounded borrow-ui__block--outstanding borrow-ui__block--content-centered"
  style={
    Object {
      "height": 200,
    }
  }
>
  
  
  Height of 200px
</div>
`;

exports[`Storyshots Components/Block Default 1`] = `
<div
  className="borrow-ui__block  borrow-ui__block--separated borrow-ui__block--padded borrow-ui__block--rounded  "
>
  <h2
    className=" borrow-ui__block__title"
  >
    Block title
  </h2>
  <p
    className="borrow-ui__text  "
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis egestas semper leo ac porta. Integer metus urna, lacinia vitae purus et, pharetra auctor purus. Vivamus bibendum id lacus sit amet faucibus.
  </p>
  <p
    className="borrow-ui__text  "
  >
    Etiam tortor orci, varius at massa ut, tristique suscipit lorem. Nullam vel metus ex. Morbi vitae mauris volutpat erat commodo ultricies at ac magna. Cras condimentum id magna vitae blandit. Vestibulum auctor, magna porta sollicitudin egestas, elit quam interdum massa, consequat sollicitudin dui felis nec massa. Nullam aliquet velit eget metus placerat tempus. Duis eu dapibus elit, et luctus odio. In velit lorem, sagittis eu sapien in, varius varius ipsum. Nunc tempor rhoncus aliquam. Nulla facilisis lobortis vulputate. Etiam sodales enim sit amet auctor suscipit. Mauris eget augue magna. Pellentesque id magna lectus.
  </p>
</div>
`;
